cmake_minimum_required (VERSION 2.8.8)
project (Fledge)

set(CMAKE_CXX_FLAGS "-std=c++11 -O3")

EXECUTE_PROCESS( COMMAND grep -o ^NAME=.* /etc/os-release COMMAND cut -f2 -d\" COMMAND sed s/\"//g OUTPUT_VARIABLE os_name )
EXECUTE_PROCESS( COMMAND grep -o ^VERSION_ID=.* /etc/os-release COMMAND cut -f2 -d\" COMMAND sed s/\"//g OUTPUT_VARIABLE os_version )

if ( ( ${os_name} MATCHES "Red Hat" OR ${os_name} MATCHES "CentOS") AND ( ${os_version} MATCHES "7" ) )
	add_compile_options(-D RHEL_CENTOS_7)
	message( "System is RHEL/CentOS 7" )
else()
	message( "System is not RHEL/CentOS 7" )
endif()

find_package(PkgConfig REQUIRED)

add_subdirectory(C/common)
add_subdirectory(C/services/common)
add_subdirectory(C/plugins/common)
add_subdirectory(C/plugins/filter/common)
add_subdirectory(C/services/storage)
add_subdirectory(C/plugins/storage/common)
add_subdirectory(C/plugins/storage/postgres)
add_subdirectory(C/plugins/storage/sqlite)
add_subdirectory(C/plugins/storage/sqlitelb)
add_subdirectory(C/plugins/storage/sqlitememory)
add_subdirectory(C/services/south)
add_subdirectory(C/services/north)
add_subdirectory(C/services/south-plugin-interfaces/python)
add_subdirectory(C/services/south-plugin-interfaces/python/async_ingest_pymodule)
add_subdirectory(C/services/notification-plugin-interfaces/python)
add_subdirectory(C/services/filter-plugin-interfaces/python)
add_subdirectory(C/services/filter-plugin-interfaces/python/filter_ingest_pymodule)
add_subdirectory(C/services/north-plugin-interfaces/python)
add_subdirectory(C/tasks/north)
add_subdirectory(C/plugins/utils)
add_subdirectory(C/plugins/north/OMF)
